feat!: Add postgres, docker-compose, split responsibilities and more
