# docs/swagger.json
@@ -21,13 +21,16 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.ListOpeningsResponse"
+							"type": "array",
+							"items": {
+								"$ref": "#/definitions/model.OpeningResponse"
+							}
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+							"$ref": "#/definitions/router.ErrorResponse"
                         }
                     }
                 }
@@ -46,12 +49,12 @@
                 "summary": "Create opening",
                 "parameters": [
                     {
-                        "description": "Request body",
-                        "name": "request",
+						"description": "Opening data to create",
+						"name": "opening",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateOpeningRequest"
+							"$ref": "#/definitions/model.OpeningRequest"
                         }
                     }
                 ],
@@ -59,19 +62,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateOpeningResponse"
+							"$ref": "#/definitions/model.OpeningResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+							"$ref": "#/definitions/router.ErrorResponse"
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
+					"404": {
+						"description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+							"$ref": "#/definitions/router.ErrorResponse"
                         }
                     }
                 }
@@ -101,19 +104,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.DeleteOpeningResponse"
+							"$ref": "#/definitions/model.OpeningResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+							"$ref": "#/definitions/router.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+							"$ref": "#/definitions/router.ErrorResponse"
                         }
                     }
                 }
@@ -144,7 +147,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.UpdateOpeningRequest"
+							"$ref": "#/definitions/model.OpeningRequest"
                         }
                     }
                 ],
@@ -152,33 +155,33 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.UpdateOpeningResponse"
+							"$ref": "#/definitions/model.OpeningResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+							"$ref": "#/definitions/router.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+							"$ref": "#/definitions/router.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+							"$ref": "#/definitions/router.ErrorResponse"
                         }
                     }
                 }
             }
         },
-        "/openings/{id}": {
+		"/openings/:id": {
             "get": {
-                "description": "Show a job opening with id",
+				"description": "Get first opening by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -188,13 +191,13 @@
                 "tags": [
                     "Openings"
                 ],
-                "summary": "Show opening",
+				"summary": "Get Openings",
                 "parameters": [
                     {
-                        "type": "integer",
+						"type": "string",
                         "description": "Opening identification",
                         "name": "id",
-                        "in": "path",
+						"in": "query",
                         "required": true
                     }
                 ],
@@ -202,19 +205,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.ShowOpeningResponse"
+							"$ref": "#/definitions/model.OpeningResponse"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+					"500": {
+						"description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
+							"$ref": "#/definitions/router.ErrorResponse"
                         }
                     }
                 }
@@ -222,7 +219,7 @@
         }
     },
     "definitions": {
-        "handler.CreateOpeningRequest": {
+		"model.OpeningRequest": {
             "type": "object",
             "properties": {
                 "company": {
@@ -245,99 +242,7 @@
                 }
             }
         },
-        "handler.CreateOpeningResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/schemas.OpeningResponse"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "handler.DeleteOpeningResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/schemas.OpeningResponse"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "handler.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "errorCode": {
-                    "type": "string"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "handler.ListOpeningsResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/schemas.OpeningResponse"
-                    }
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "handler.ShowOpeningResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/schemas.OpeningResponse"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "handler.UpdateOpeningRequest": {
-            "type": "object",
-            "properties": {
-                "company": {
-                    "type": "string"
-                },
-                "link": {
-                    "type": "string"
-                },
-                "location": {
-                    "type": "string"
-                },
-                "remote": {
-                    "type": "boolean"
-                },
-                "role": {
-                    "type": "string"
-                },
-                "salary": {
-                    "type": "integer"
-                }
-            }
-        },
-        "handler.UpdateOpeningResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/schemas.OpeningResponse"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "schemas.OpeningResponse": {
+		"model.OpeningResponse": {
             "type": "object",
             "properties": {
                 "company": {
@@ -369,6 +274,17 @@
                 },
                 "updatedAt": {
                     "type": "string"
+				}
+			}
+		},
+		"router.ErrorResponse": {
+			"type": "object",
+			"properties": {
+				"errorCode": {
+					"type": "string"
+				},
+				"message": {
+					"type": "string"
                 }
             }
         }
