# router/router.go
@@ -1,25 +1,54 @@
 package router
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/devjunio/gojob/config"
+	"os"
 
-func Initialize() {
+	"github.com/gin-gonic/gin"
+)
+
+var (
+	logger   *config.Logger
+	path     string
+	port     string
+	fullpath string
+)
+
+func Initialize() error {
+	logger = config.SetLogger("router")
 	route := gin.Default()
-	initializeRoute(route)
-	err := route.Run(":8080")
-	if err != nil {
-		panic("error: initializing route on router.go")
-		return
+
+	path = os.Getenv("APP_PATH")
+	if path == "" {
+		path = "0.0.0.0"
 	}
+
+	port = ":" + os.Getenv("APP_PORT")
+	if port == ":" {
+		port += "8080"
+	}
+
+	fullpath = path + port
+
+	setRouteConfig(route)
+	err := route.Run(fullpath)
+	if err != nil {
+		logger.Error("error: initializing route on router.go")
+		return err
+	}
+
+	return nil
 }
 
 func setDefaultRoute(path []string, route string) string {
-	var p = ""
-
 	if len(path) > 0 {
-		p = path[0]
-	} else {
-		p = route
+		route = path[0]
 	}
 
-	return p
+	return route
+}
+
+type ErrorResponse struct {
+	Message   string `json:"message"`
+	ErrorCode string `json:"errorCode"`
 }
